2019-1/231/users/4232/executions/1651_1054.log
== TEST (2019-04-07 13:17:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input())
y=float(input())
p=(x,y)
if p==(2x+y=3):
	 print("ponto pertence a reta")
else:
    print("ponto nao pertence a reta")
-- ERROR:
File "XXXX", line 7
    if p==(2x+y=3):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 13:18:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input())
y=float(input())
p=(x,y)
if p==2x+y=3:
	 print("ponto pertence a reta")
else:
    print("ponto nao pertence a reta")
-- ERROR:
File "XXXX", line 7
    if p==2x+y=3:
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 13:18:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input())
y=float(input())
p=(x,y)
if "p"==2x+y=3:
	 print("ponto pertence a reta")
else:
    print("ponto nao pertence a reta")
-- ERROR:
File "XXXX", line 7
    if "p"==2x+y=3:
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:01:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input())
y=float(input())
p=2*x+y
if p==3:
	 print("ponto pertence a reta")
else:
    print("ponto nao pertence a reta")
-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:01:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input())
y=float(input())
p=2*x+y
if p==3:
	 print("ponto pertence a reta")
else:
    print("ponto nao pertence a reta")
-- EXECUTION TIME:
0.170094
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
